2006-07-22  Andrew Cagney  <cagney@redhat.com>

	* tests/TestDwfl.java (trueXXX, brokenXXX): Add.
	(testGetLine): Disable.

2005-07-21  Adam Jocksch  <ajocksch@redhat.com>

	* tests/testDwfl.java: GNU formatted.

	* DwarfDie.java (getScopes): Added.
	(get_scopes): Added.
	* cni/DwarfDie.cxx (get_scopes): Added.
	* tests/TestDwfl.java (testGetDie): Added.

2005-07-17  Adam Jocksch  <ajocksch@redhat.com>

	* DwarfDie.java (getName): Added.
	(get_diename): Added.
	* cni/Dwarf.cxx (DWARF_POINTER): Refactored out.
	* cni/DwarfDie.cxx (DWARF_DIE_POINTER): Ditto.
	(get_diename): Added.
	* cni/Dwfl.cxxx (DWFL_POINTER): Refactored out.
	* cni/DwflLine.cxx (DWFL_LINE_POINTER): Ditto.

2005-07-14  Adam Jocksch  <ajocksch@redhat.com>

	* Dwfl.java: Changed to GNU formatting.
	(getDie): Added.
	* DwflDie.java: Changed to GNU formatting.
	(DwflDie): Now takes a pointer to a Dwfl parent object.
	(getLowPC): Added.
	(getHighPC): Added.
	* cni/DwflDie.cxx: Added.
	* cni/Dwfl.java (dwfl_addrdie): Added.

2005-06-19  Adam Jocksch  <ajocksch@redhat.com>

	* NoDebugInfoException.java: Added.

2005-06-14  Adam Jocksch  <ajocksch@redhat.com>

	* cni/Dwfl.cxx (dwfl_begin): Now uses JvAllocBytes to allocate the
	memory for the callbacks struct, so it can be kept in a RawDataManaged.

2005-06-06  Adam Jocksch  <ajocksch@redhat.com>

	* tests/TestDwfl.java (testGetLine): Now checks for correctness of
	filename, line number, and column, also removed failing assertion from
	end that was used for debugging purposes.
	
	* tests/TestDwfl.java: Added Frysk license.
	* tests/TestLib.java: Ditto.
	* tests/cni/TestLib.cxx: Ditto.

	* tests: Added.
	* tests/TestDwfl.java: Added.
	* tests/TestLib.java: Added.
	* tests/cni: Added.
	* tests/cni/TestLib.cxx: Added.

2005-06-05  Adam Jocksch  <ajocksch@redhat.com>

	* Dwfl.java (getCallbacks): Added, shouldn't be called just satisfying
	ecj.
	* Dwfl.cxx (dwfl_begin): Now properly allocates callback object.

2005-05-31  Adam Jocksch  <ajocksch@redhat.com>
